removed hover of reset button on smaller screens to fix double click bug that happens with touch devices and elemets that have hover.

--- a/style.css
+++ b/style.css
@@ -43,10 +43,12 @@ body {
   position: relative;
 }
 
-.reset-button:hover {
-  color: #000000;
-  background-color: #FFFFFF;
-  border-color: #FFFFFF;
+@media only screen and (min-width: 720px) {
+  .reset-button:hover {
+    color: #000000;
+    background-color: #FFFFFF;
+    border-color: #FFFFFF;
+  }
 }
 
 .main {
